css/stylesheet.css
/**
 * KNOWN BUG: Selected tabs are slightly too tall causing a scroll bar to appear
 * on small panels
 */

:root {
	/* Tab Bar */
	--tab-bar-height: 34px;
	/* --- */
	--tab-bar-color: hsl(330deg, 4%, 90%);

	/* Tab and Tab add Button */
	--tab-height: var(--tab-bar-height);
	--tab-max-width: 120px;
	--tab-min-width: 40px;
	--tab-padding: 10px;
	--tab-gap: 2px;
	/* --- */
	--tab-color: transparent;
	--tab-hover-color: color-mix(in srgb, black, transparent 90%);
	--tab-selected-color: white;
	--tab-selected-drop-shadow: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.5));

	/* Tab Close Button */
	--button-tab-close-height: calc(var(--tab-height) * 0.7);
	/* --- */
	--button-tab-close-hover-color: color-mix(in srgb, black, transparent 90%);
}

body {
	margin: 0;
}

div.context-menu {
	visibility: hidden;

	display: flex;
	flex-direction: column;
	gap: 2px;

	position: absolute;
	z-index: 1;

	box-sizing: border-box;
	min-width: 100px;
	width: fit-content;
	max-width: 250px;
	

	border: 2px solid darkgray;
	border-radius: 4px;

	padding: 2px;

	user-select: none;

	background-color: white;
}

div.context-menu-option {
	display: block;

	box-sizing: border-box;
	min-width: 100%;

	border: 2px solid transparent;
	border-radius: 4px;

	padding: 4px 60px 4px 30px;

	font-family: sans-serif;
	font-size: small;
	background-color: transparent;

	&:hover {
		border-color: darkgray;
		background-color: rgba(0, 0, 0, 0.25);
	}
}

div.panel-root {
	display: block;

	box-sizing: border-box;
	height: 400px;
	width: 600px;

	padding: 4px;

	background-color: black;
}

div.panel {
	display: block;

	box-sizing: border-box;
	height: 100%;
	width: 100%;
	min-height: 10px;
	min-width: 10px;
	flex-grow: 1;

	/*padding: 4px;*/

	background-color: white;
}

div.panel-split-vertical {
	all: unset;
	display: flex;

	box-sizing: border-box;
	height: 100%;
	width: 100%;
	min-height: 10px;
	min-width: 10px;
	flex-grow: 1;
	overflow-x: hidden;

	background-color: black;

	& > div.panel-divider {
		all: unset;
		display: block;

		z-index: 1;

		height: 100%;
		max-width: 4px;
		min-width: 4px;

		cursor: e-resize;

		user-select: none;

		background-color: black;
	}
}

div.panel-split-horizontal {
	all: unset;
	display: flex;
	flex-direction: column;

	box-sizing: border-box;
	height: 100%;
	width: 100%;
	min-height: 10px;
	min-width: 10px;
	flex-grow: 1;
	overflow-y: hidden;

	background-color: black;

	& > div.panel-divider {
		all: unset;
		display: block;

		z-index: 1;

		max-height: 4px;
		min-height: 4px;
		width: 100%;

		cursor: n-resize;

		user-select: none;

		background-color: black;
	}
}

div.tab-bar {
	display: flex;
	flex-wrap: nowrap;
	align-items: flex-end;
	gap: var(--tab-gap);

	height: var(--tab-bar-height);
	width: 100%;

	overflow-x: scroll;

	& div.tab-document {
		visibility: hidden;
	}
}

div.tab {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;

	height: var(--tab-height);
	max-width: var(--tab-max-width);
	min-width: var(--tab-min-width);
	flex-grow: 1;

	z-index: 1;

	user-select: none;
}

div.tab-title {
	margin-left: var(--tab-padding);

	white-space: nowrap;
	overflow: hidden;
}

div.ghost-tab {
	display: block;
}

div.button-tab-add {
	display: block;

	height: var(--tab-height);
	min-width: var(--tab-height);

	z-index: 1;

	user-select: none;
}

div.button-tab-close {
	display: block;

	height: var(--button-tab-close-height);
	min-width: var(--button-tab-close-height);
	margin-right: calc((var(--tab-height) - var(--button-tab-close-height)) * 0.5);
}

div.tab-document-view {
	display: block;

	position: relative;

	height: calc(100% - var(--tab-bar-height));
	width: 100%;

	background-color: transparent;
}

div.tab-document {
	display: block;

	position: absolute;
	top: 0px;
	left: 0px;

	height: 100%;
	width: 100%;
}

/* Colors and styles */
div.panel {
	/*border: 1px solid var(--tab-bar-color);*/

	/*background-color: white;*/
	/*background-color: transparent;*/
}

div.tab-bar {
	background-color: var(--tab-bar-color);
}

div.tab {
	border-radius: 5px;

	font-family: monospace;
	font-size: medium;	

	background-color: var(--tab-color);

	&:not(.tab-selected):hover{
		background-color: var(--tab-hover-color);
	}
}

div.tab-selected {
	/*border: 1px solid var(--tab-bar-color);*/

	filter: var(--tab-selected-drop-shadow);

	background-color: var(--tab-selected-color);
}

div.ghost-tab {
	/*border: 1px solid transparent;*/

	background-color: transparent;
}

div.button-tab-add {	
	border-radius: 5px;

	background-color: var(--tab-color);

	&:hover {
		background-color: var(--tab-hover-color);
	}
}

div.button-tab-close {
	border-radius: 5px;

	background-color: transparent;

	&:hover {
		background-color: var(--button-tab-close-hover-color);
	};
}

div.icon-add {
	height: 100%;
	width: 100%;


	font-family: sans-serif;
	font-weight: bold;
	font-size: small;

	text-align: center;
	align-content: center;
	line-height: 100%;

	&::before {
		content: "\FF0B";
	}
}

div.icon-close {
	height: 100%;
	width: 100%;

	font-family: serif;
	/*font-weight: bold;*/
	font-size: small;

	text-align: center;
	align-content: center;
	line-height: 100%;

	&::before {
		content: "\00D7";
	}
}

textarea {
	all: unset;

	width: 100%;
	height: 100%;

	padding-left: 25px;

	font-family: monospace;
	font-size: large;

	/*caret-color: red;*/

	/*background-color: red;*/
}

